[package]
name = "iocp-tx"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.57.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Graphics", "Win32_Graphics_Gdi", "Win32_System_Threading", "Win32_Security", "Win32_System_LibraryLoader", "Win32_System_Diagnostics_Debug", "Win32_System_Memory", "Win32_System_Pipes", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_SystemServices" ] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
iocp-shared = { path = "../iocp-shared/" }
